@@ -1,4 +1,4 @@
 DIST textext-0.4.1.tar.gz 7363 RMD160 53f9ae48ff4cb954656ef96b1ccf9b0c8cada830 SHA1 fec6da8a939673819edff8c79b0d6b5e26928bf3 SHA256 28b9af204b9a7ef3d406cc7dee02777572c1517fdeefcd882bd7b3e80017b96b
-EBUILD textext-0.4.1.ebuild 1051 RMD160 7c3c8da9c7f22e03564e2757a8ae4b9b653b5e20 SHA1 83a191c5566e5871a7065c1665d2f99ee8dd2253 SHA256 603093f0c8c16ed656db0d3c4fde5167f6d3ce4ad62d0e309adcdcded9ec76d8
-MISC ChangeLog 626 RMD160 1d33148563043686bd5249b916144067c2b290ff SHA1 658c7c34296d744d7cdd4413f930733616fe992b SHA256 caf6016bd30f189a64fd1c3a77b1c213c6644ec73ef78375a2e473dda1e31774
+EBUILD textext-0.4.1.ebuild 1076 RMD160 65ca5a7087370ce9b9ca1301395a5654b7936624 SHA1 e7b815820da8e5c07e3913a7ff8d5944c73ee9b8 SHA256 ea8bdd7c01a1dc02f26bb8e7ffacc8c2c2ef2f1c4e4b4aacafed8c86ce678ff8
+MISC ChangeLog 742 RMD160 b2fa1b5af5bc6bd384c4bc1a4d741f000563b3c6 SHA1 02be994616b60f85cba2e62177587151fc1416cd SHA256 508c5b432d46113d6cfda60b51d4ebcbd7ba35b1fda8082d9efe1f55178e8584
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
