@@ -10,10 +10,11 @@ SRC_URI="http://www.elisanet.fi/ptvirtan/software/textext/${P}.tar.gz"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="~amd64"
+KEYWORDS="~amd64 ~x86"
 IUSE=""
 
-RDEPEND="|| ( media-gfx/pdf2svg media-gfx/pstoedit )"
+RDEPEND="media-gfx/inkscape
+	|| ( media-gfx/pdf2svg media-gfx/pstoedit )"
 DEPEND="${RDEPEND}"
 
 pkg_setup() {
