@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 May 2008; Oliver Borm (boroli) <oli.borm@web.de> textext-0.4.1.ebuild:
+  Added ~x86 support and inkscape dep.
+
   04 May 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   -textext-0.3.3.ebuild:
   Drop old version
